@@ -165,6 +165,7 @@ ags_display_tact_launch(AgsTask *task)
 							window->devout->delay_factor);
   
   gtk_label_set_label(navigation->duration_time, timestr);
+  gtk_widget_queue_draw(navigation->duration_time);
   g_free(timestr);
 }
 
